--- a/火车票开发文档.md
+++ b/火车票开发文档.md
@@ -193,7 +193,7 @@
       T find(const Key &key) {}
       //一对一键值查找
   
-      std::vector <T> Find(const Key &key) {}
+      sjtu::vector <T> Find(const Key &key) {}
       //一对多键值查找
   
   };
@@ -255,14 +255,6 @@
 - `user.hpp`：用户类
 
   ```c++
-#ifndef USER_HPP
-  #define USER_HPP
-  
-  #include "string.hpp"
-  #include "map.hpp"
-  #include "bptree.hpp"
-  #include "error.hpp"
-  
   class user{
   private:
   	string<20> username;
@@ -326,19 +318,10 @@
   ```
   
   
-
+  
 - `train.hpp`：车次类
 
   ```c++
-  #ifndef TRAIN_HPP
-  #define TRAIN_HPP
-  
-  #include "string.hpp"
-  #include "date.hpp"
-  #include "map.hpp"
-  #include "bptree.hpp"
-  #include "error.hpp"
-  
   struct station{
   	string<30> name;
   	int hashe;
@@ -409,11 +392,11 @@
   
   };
   
-  BPTtree<string,int> bpt_station_train;
-  //每个车站对应哪些车次id位置
+  BPTtree<int,int> bpt_station_train;
+  //每个车站的哈希值对应哪些车次id位置
   
-  BPTtree<string,std::pair<int,int>> bpt_train_information;
-  //每个车次id对应数据库中位置 fisrt 对应火车信息，second对应车票信息
+  BPTtree<int,std::pair<int,int>> bpt_train_information;
+  //每个车次的哈希值对应数据库中位置 fisrt 对应火车信息，second对应车票信息
   
   database<train> train_information;
   //找到对应的火车信息
@@ -431,13 +414,10 @@
   void query_ticket(){}
   
   void query_transfer(){}
-  
-  #endif
-  
   ```
-
   
-
+  
+  
 - `order.hpp`：订单类
 
   ```c++
@@ -463,11 +443,11 @@
   	date time;
   };
   
-  BPTtree<string,order> btp_user_order;
-  //用用户id查询订单
+  BPTtree<int,order> btp_user_order;
+  //用户id的哈希值查询订单
   
-  BPTtree<string,order> btp_train_order;
-  //查询id车次的候补队列
+  BPTtree<int,order> btp_train_order;
+  //用户id的哈希值查询车次的候补队列
   
   void buy_ticket(){}
   
