--- a/火车票开发文档.md
+++ b/火车票开发文档.md
@@ -149,8 +149,8 @@
       std::fstream file_bpt,file_leaf;
       std::pair <Key, T> value;
       std::string recyle;
-      int root;//根节点所在位置
-      int empty;//空的空间所在位置，为一个单向链表
+      int root;//根节点所在位置 放在文件头
+      int empty;//空的空间所在位置，为一个单向链表 链表头接在root后
       struct Node {
           bool is_leaf;
           int n;// n个关键字
@@ -509,6 +509,17 @@
 
   - 回滚操作，由一个顺序存储指令的文件构成
 
-## 五、其他补充说明
+## 五、所用到Tool
 
-前端与前后端连接部分暂未完成
+`namespace sjtu`
+
+- `vector`
+- `map`
+- `linkhashmap`
+- `string`
+- `date`
+
+## 六、其他补充说明
+
+- 前端与前后端连接部分暂未完成
+- 实现过程中可能会对开发文档进行细节修改，但保证不会颠覆整体逻辑
