--- a/火车票开发文档.md
+++ b/火车票开发文档.md
@@ -513,11 +513,58 @@
 
 `namespace sjtu`
 
-- `vector`
-- `map`
-- `linkhashmap`
+- 手动实现的stl库
+
+  `vector`
+
+  `map` 
+
+  `linkhashmap`
+
 - `string`
+
+  ```c++
+  template<int len=10>
+  class string{
+  private:
+     char str[len];
+     const int prime=793999;
+     const int mod=1e9+7;
+  public:
+     string(){}
+     
+     string(const std::string& str){}
+  
+     operator int(){}
+     //转化为哈希值
+  };
+  ```
+
 - `date`
+
+  ```c++
+  class date{
+  private:
+      int month;
+      int day;
+      int hour;
+      int minute;
+  public:
+      date(){}
+  
+      date(const std::string& _date){}
+  
+      date(const date& other){}
+  
+      operator std::string(){}
+      //转化为string类，方便输出
+  
+      operator int(){}
+      //转化为int类，方便比较
+  
+      ~date(){}
+  };
+  ```
 
 ## 六、其他补充说明
 
