--- a/back_end/实现要求.md
+++ b/back_end/实现要求.md
@@ -14,6 +14,9 @@
 - 分组方式为自行组队，确认分组后请在 [该QQ文档](https://docs.qq.com/sheet/DRVFoS2RYcFZsdHBr) 中进行登记
 - 分组的DDL为4月25日晚23:59分前，逾期未填写的同学将由助教随机分组。
 - 想要独立完成本作业的学生请联系助教
+- 本作业要求在github的项目管理中，使用git的分支协作开发，维持良好的项目管理习惯。
+  - 本项目的中期检查等检查方式均会通过查看登记的git仓库链接，因此如果想更换仓库的链接请及时联系助教。
+  - 本部分的相关分数会在cr中检查。
 
 #### 截止日期
 
@@ -303,6 +306,22 @@
     
     `0`
 
+##### [N] `delete_train`
+
+  - 参数列表
+
+    `-i`
+
+  - 说明
+
+    删除`<trainID>`为`-i`的车次，删除车次必须保证未发布。
+
+  - 返回值
+
+    删除成功：`0`
+
+    删除失败：`-1`
+    
 ##### [N] `release_train`
 
   - 参数列表
